fixed the overlapping carousel issue. Home page scaffolding complete. (rough draft)

--- a/style.css
+++ b/style.css
@@ -5,12 +5,9 @@ html {
 body {
 	background-color: black;
 	height: 100%;
+	padding: 50px 0px;
 }
 
-h3 {
-	margin: 0;
-	padding: 0;
-}
 
 /*================================================================================================
 
@@ -19,6 +16,10 @@ NAVIGATION
 ================================================================================================*/
 
 
+
+
+nav {
+}
 
 .active {
 	border-bottom: 1px solid red;
@@ -46,7 +47,6 @@ JUMBOTRON
 
 
 #myCarousel {
-	top: 32px;
 	height: 500px;
 }
 
@@ -91,7 +91,9 @@ JUMBOTRON
 ================================================================================================*/
 
 
-
+.homeBio {
+	background-color: gray;
+}
 
 
 /*================================================================================================
@@ -101,4 +103,9 @@ JUMBOTRON
 ================================================================================================*/
 
 
+
+footer {
+	margin: 50px auto 0px auto;
+	float: right;
+}
 
